trying to fix card text alignment

--- a/app/assets/stylesheets/pages/_npl-index.scss
+++ b/app/assets/stylesheets/pages/_npl-index.scss
@@ -11,9 +11,16 @@
     font-weight:bold;
     font-size: 32px;
   }
-  p{
-    vertical-align: text-bottom;
-    font-size:14px;
+  .card-text{
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    vertical-align: bottom;
+    li{
+      display: inline-block;
+      font-size:16px;
+      line-height: 45px;
+    }
   }
 }
 
